@@ -42,23 +42,23 @@ public class FloydWarshallTest {
         graph.addEdge("v5v4", "v5", "v4").addAttribute("weight", 3.0);
         graph.addEdge("v5v6", "v5", "v6").addAttribute("weight", 1.0);
 
-        graph3 = fromFile("graph3", new File("src/main/resources/output/graph03.gka"));
+        graph3 = fromFile("graph3", new File("src/main/resources/input/BspGraph/graph03.gka"));
     }
 
     @Test(expected = IllegalArgumentException.class)
     public void graphWithNoWeightTest() throws Exception {
-        Graph graph9 = fromFile("graph09", new File("src/main/resources/output/graph09.gka"));
+        Graph graph9 = fromFile("graph09", new File("src/main/resources/input/BspGraph/graph09.gka"));
         FloydWarshall floyd = new FloydWarshall();
-        floyd.setSourceAndTarget(graph9.getNode("a"), graph9.getNode("d"));
         floyd.init(graph9);
+        floyd.setSourceAndTarget(graph9.getNode("a"), graph9.getNode("d"));
         floyd.compute();
     }
 
     @Test
     public void computeSimpleGraphTest() throws Exception {
         FloydWarshall floyd = new FloydWarshall();
-        floyd.setSourceAndTarget(graph.getNode("v1"), graph.getNode("v4"));
         floyd.init(graph);
+        floyd.setSourceAndTarget(graph.getNode("v1"), graph.getNode("v4"));
         floyd.compute();
         // TODO anderer Test
         assertEquals(new Double(6), floyd.distance);
@@ -67,41 +67,43 @@ public class FloydWarshallTest {
     @Test
     public void graph03test() throws Exception {
         FloydWarshall floyd = new FloydWarshall();
-        floyd.setSourceAndTarget(graph3.getNode("Hamburg"), graph3.getNode("Lübeck"));
         floyd.init(graph3);
+        floyd.setSourceAndTarget(graph3.getNode("Hamburg"), graph3.getNode("Lübeck"));
         floyd.compute();
         assertEquals(new Double(170.0), floyd.distance);
-        assertEquals(new Integer(484), floyd.steps);
+        assertEquals(new Integer(484), floyd.hits);
     }
 
     @Test
     public void bigGraphTest() throws Exception {
         int nodes = 100;
         int edges = 2500;
-        int edgeCount = 0;
+        int edgeCount = 1;
         Random random = new Random();
         Graph bigGraph = new SingleGraph("bigGraph");
 
         for (int i = 1; i <= nodes; i++) {
             bigGraph.addNode("" + i);
         }
-        bigGraph.addEdge("1_100", "1", "100");
+        bigGraph.addEdge("1_100", "1", "100").addAttribute("weight", 1);
         for (int i = 2; i <= edges; i++) {
-            int r = random.nextInt(nodes - 1);
-            if (r == 0) r += +1;
+            int x = random.nextInt(nodes - 1) + 1;
+            int y = random.nextInt(nodes - 1) + 1;
             try {
-                bigGraph.addEdge(i + "_" + r, i + "", r + "").addAttribute("weight", 1);
+                bigGraph.addEdge(x + "_" + y + "| " + edgeCount + " |", x + "", y + "").addAttribute("weight", 1);
             } catch (EdgeRejectedException o) {
+                i--;
                 continue;
             }
             edgeCount++;
         }
         FloydWarshall floydWarshall = new FloydWarshall();
+        floydWarshall.logMatrix = false;
         floydWarshall.init(bigGraph);
         floydWarshall.setSourceAndTarget(bigGraph.getNode("1"), bigGraph.getNode("" + nodes));
         floydWarshall.compute();
         assertEquals(2500, edgeCount);
-        assertEquals(new Double(edges), floydWarshall.distance);
-        assertEquals(new Integer(edges), floydWarshall.steps);
+        assertEquals(Double.valueOf(1), floydWarshall.distance);
+        assertEquals(Integer.valueOf(10000), floydWarshall.hits);
     }
 }
